# ml_ops

./: LICENSE  Makefile  README.md  data.dvc  pyproject.toml  requirements.txt
.dvc/: config
dockerfiles/: train_model.dockerfile
docs/: mkdocs.yaml
ml_ops/: train_model.py
ml_ops/data/: make_dataset.py
ml_ops/models/: checkpoint.pth  model.py
models/: checkpoint.pth
